--- a/scss/partials/question.scss
+++ b/scss/partials/question.scss
@@ -45,7 +45,7 @@
 
                     .q-container{
                         min-height: 200px;
-                        margin: 15px;
+                        margin: 15px 15px 0px 15px;
                         margin-bottom: 0; 
                         width: 42%; 
                         .q-item{
